# grppi

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  CREDITS.txt  Doxyfile  FABIO_status  INSTALL.md  LICENSE  LICENSES.txt  NOTICE  README  README.md  compile-dox.sh  conanfile.py  runTest.cmake  runTestReference.cmake  srclicense.txt
docs/: CMakeLists.txt  Doxyfile  README.md
docs/0.2/: _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  basic_8dox.html  callable__traits_8h.html  callable__traits_8h__dep__incl.map  callable__traits_8h__dep__incl.md5  callable__traits_8h_source.html  classes.html  classgrppi_1_1farm__info.html  classgrppi_1_1filter__info-members.html  classgrppi_1_1filter__info.html  classgrppi_1_1mpmc__queue-members.html  classgrppi_1_1mpmc__queue.html  classgrppi_1_1parallel__execution__native-members.html  classgrppi_1_1parallel__execution__native.html  classgrppi_1_1parallel__execution__native__coll__graph.map  classgrppi_1_1parallel__execution__native__coll__graph.md5  classgrppi_1_1parallel__execution__omp-members.html  classgrppi_1_1parallel__execution__omp.html  classgrppi_1_1parallel__execution__tbb-members.html  classgrppi_1_1parallel__execution__tbb.html  classgrppi_1_1pipeline__info-members.html  classgrppi_1_1pipeline__info.html  classgrppi_1_1polymorphic__execution-members.html  classgrppi_1_1polymorphic__execution.html  classgrppi_1_1reduction__info-members.html  classgrppi_1_1reduction__info.html  classgrppi_1_1sequential__execution-members.html  classgrppi_1_1sequential__execution.html  classgrppi_1_1thread__pool-members.html  classgrppi_1_1thread__pool.html  classgrppi_1_1thread__registry-members.html  classgrppi_1_1thread__registry.html  data_8dox.html  dir_000000_000001.html  dir_000000_000002.html  dir_000000_000003.html  dir_000000_000004.html  (+640 more)
docs/0.3.1/: _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  callable__traits_8h.html  callable__traits_8h__dep__incl.map  callable__traits_8h__dep__incl.md5  callable__traits_8h__incl.map  callable__traits_8h__incl.md5  callable__traits_8h_source.html  classes.html  classgrppi_1_1context__t-members.html  classgrppi_1_1context__t.html  classgrppi_1_1detail__ff_1_1filter__collector-members.html  classgrppi_1_1detail__ff_1_1filter__collector.html  classgrppi_1_1detail__ff_1_1filter__collector__coll__graph.md5  classgrppi_1_1detail__ff_1_1filter__collector__inherit__graph.map  classgrppi_1_1detail__ff_1_1filter__emitter-members.html  classgrppi_1_1detail__ff_1_1filter__emitter.html  classgrppi_1_1detail__ff_1_1filter__emitter__coll__graph.map  classgrppi_1_1detail__ff_1_1filter__emitter__inherit__graph.md5  classgrppi_1_1detail__ff_1_1filter__worker-members.html  classgrppi_1_1detail__ff_1_1filter__worker.html  classgrppi_1_1detail__ff_1_1filter__worker__inherit__graph.map  classgrppi_1_1detail__ff_1_1filter__worker__inherit__graph.md5  classgrppi_1_1detail__ff_1_1iteration__worker-members.html  classgrppi_1_1detail__ff_1_1iteration__worker.html  classgrppi_1_1detail__ff_1_1iteration__worker__coll__graph.map  classgrppi_1_1detail__ff_1_1iteration__worker__coll__graph.md5  classgrppi_1_1detail__ff_1_1node__impl-members.html  classgrppi_1_1detail__ff_1_1node__impl.html  classgrppi_1_1detail__ff_1_1node__impl_3_01_input_00_01void_00_01_consumer_01_4-members.html  classgrppi_1_1detail__ff_1_1node__impl__coll__graph.md5  (+551 more)
doxy/: CMakeLists.txt  Doxyfile  README.md
hayai_tests_performance/: CMakeLists.txt  divideandconquer.cpp  farm.cpp  map.cpp  mapreduce.cpp  pipeline.cpp  reduce.cpp  stencil.cpp  supported_executions.h
legacy_utest/: CMakeLists.txt  divideandconquer-fibonacci_GT.cpp  divideandconquer1_GT.cpp  farm1_GT.cpp  farm2_GT.cpp  farm3_GT.cpp  farm_GT.cpp  farm_example_GT.cpp  filter_example_GT.cpp  main_GT.cpp  map1_GT.cpp  map2_GT.cpp  map3_GT.cpp  map4_GT.cu  map_GT.cpp  mapreduce1_GT.cpp  mapreduce2_GT.cu  pipeline+farm_GT.cpp  pipeline+filter_test_ppi_example_GT.cpp  pipeline1_GT.cpp  pipeline2_GT.cpp  pipeline_example_GT.cpp  reduce1_GT.cpp  reduce2_GT.cpp  stencil1_GT.cpp  stream_reduce1_GT.cpp  stream_reduce2_GT.cu  stream_reduce_example_GT.cpp  stream_reduce_new_GT.cpp
performance_tests/: .map_GRPPI.cpp.swp  CMakeLists.txt  farm_FF.cpp  farm_GRPPI.cpp  map_FF.cpp  map_GRPPI.cpp  reduce_FF.cpp  reduce_GRPPI.cpp  stencil_FF.cpp  stencil_GRPPI.cpp  stream-reduce_GRPPI.cpp  supported_executions.h
samples/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  affinity_test.cpp  bench_farm.cu  bench_farm_GT.cu  divideandconquer-fibonacci.cpp  divideandconquer-fibonacci_GT.cpp  divideandconquer-quicksort.cpp  divideandconquer1.cpp  divideandconquer1_GT.cpp  farm1.cpp  farm1_GT.cpp  farm2.cpp  farm2_GT.cpp  farm3.cpp  farm3_GT.cpp  farm4.cu  farm4_GT.cu  farm_example.cpp  farm_example_GT.cpp  farm_sink.cpp  filter_example.cpp  filter_example_GT.cpp  map1.cpp  map1_GT.cpp  map2.cpp  map2_GT.cpp  map3.cpp  map3_GT.cpp  map4.cu  map4_GT.cu  mapreduce1.cpp  mapreduce1_GT.cpp  mapreduce2.cu  mapreduce2_GT.cu  operators.cpp  pipeline+farm.cpp  pipeline+farm_GT.cpp  pipeline+filter_test_ppi_example.cpp  pipeline+filter_test_ppi_example_GT.cpp  pipeline1.cpp  (+25 more)
unit_tests/: CMakeLists.txt  CMakeLists.txt.in  bench_farm_GT.cu  composed_stream_reduce.cpp  configuration.cpp  context.cpp  divideandconquer-fibonacci_GT.cpp  divideandconquer.cpp  divideandconquer1_GT.cpp  divideandconquer_legacy.cpp  divideandconquer_pred.cpp  farm.cpp  farm1_GT.cpp  farm2_GT.cpp  farm3_GT.cpp  farm4_GT.cu  farm_example_GT.cpp  farm_pipeline_composition.cpp  filter_example_GT.cpp  hwloc_topology.cpp  map.cpp  map1_GT.cpp  map2_GT.cpp  map3_GT.cpp  map4_GT.cu  map_static.cpp  mapreduce.cpp  mapreduce1_GT.cpp  mpmc-queue.cpp  numa_affinity.cpp  patterns.cpp  pipeline+farm_GT.cpp  pipeline+filter_test_ppi_example_GT.cpp  pipeline.cpp  pipeline1_GT.cpp  pipeline2_GT.cpp  pipeline_example_GT.cpp  polymorphic_execution.cpp  reduce.cpp  reduce1_GT.cpp  (+11 more)
(+2845 files in other folders)
